[package]
name = "breakout"
version = "0.2.0"
description = "Breakout detection for Rust"
repository = "https://github.com/ankane/breakout-rust"
license = "GPL-2.0-or-later"
authors = ["Andrew Kane <andrew@ankane.org>"]
edition = "2018"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
